<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AcercaDe" >

    <include android:id="@+id/aboutActionBar"
        layout="@layout/action_bar">
    </include>

    <TextView
        android:id="@+id/tvAboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_margin="20dp"
        android:text="@string/acerca_de_title" />

    <TextView
        android:id="@+id/tvAboutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:text="@string/acerca_de_name" />

    <TextView
        android:id="@+id/tvAboutCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="8dp"
        android:text="@string/acerca_de_correo" />

    <TextView
        android:id="@+id/tvAboutLinkedin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="8dp"
        android:text="@string/acerca_de_linkedin" />

</LinearLayout>